Fix simplified toggle overlapping other items

--- a/angular/src/app/shared/layout/layout.component.scss
+++ b/angular/src/app/shared/layout/layout.component.scss
@@ -43,7 +43,7 @@ mat-sidenav-container {
 
 .settings-view-toggle {
   width: 100%;
-  position: absolute;
+  position: relative;
   bottom: 0;
 
   mat-list-item {
